Fixed about me section on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -177,5 +177,8 @@ footer{
         margin: 0;
         margin-top: 5vw;
     }
+    #content{
+        width: 100vw;;
+    }
     
 }
